--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,12 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
