--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.jpa.hibernate.ddl-auto=update
 # Porta do servidor
 server.port=8080
 
+api.security.token.secret=${JWT_SECRET:chave-secundaria}
